<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_default"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <RelativeLayout
        android:id="@+id/place_label_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/query_label"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:onClick="search"
            android:text="@string/query_label"
            android:textColor="@color/font_gray"
            android:layout_marginLeft="40dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/place_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/place_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/place_icon"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edit_query"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:hint="@string/query_hint"
            android:onClick="search"
            android:textColor="@color/font_blue"
            android:layout_toRightOf="@+id/place_icon"
            android:layout_marginLeft="10dp"

            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/dates_labels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/place_container"
        android:layout_marginTop="20dp"
        >


        <LinearLayout
            android:id="@+id/dates_labels_container_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:id="@+id/from_date_label"
                android:layout_width="0px"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/from_date_label"
                android:textColor="@color/font_gray"
                />

            <TextView
                android:id="@+id/to_date_label"
                android:layout_width="0px"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/to_date_label"
                android:textColor="@color/font_gray"
                android:layout_toRightOf="@+id/from_date"
                />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dates_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dates_labels"
        >

        <ImageView
            android:id="@+id/calendar_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/calendar_icon"
            android:layout_marginTop="10dp"/>


        <LinearLayout
            android:id="@+id/dates_container_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/calendar_icon"
            android:layout_marginLeft="10dp"
            >

            <EditText
                android:id="@+id/from_date"
                android:layout_width="0px"
                android:layout_weight="2"
                android:layout_height="60dp"
                android:textColor="@color/font_blue"
                />

            <EditText
                android:id="@+id/to_date"
                android:layout_width="0px"
                android:layout_weight="2"
                android:layout_height="60dp"
                android:textColor="@color/font_blue"
                android:layout_toRightOf="@+id/from_date"
                />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button_search_label"
        android:layout_alignParentBottom="true"
        android:background="@color/button_primary"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="check"/>

</RelativeLayout>
